--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,12 @@
 target/
 .idea/
 *.fir
-*.v
 test_run_dir/
 generated-src/
 hammer-vlsi*
 out/
 *-output.json
+*.riscv
+verilator/
+simulator-*
+*.vcd
